--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tga",
-  "version": "0.1.3",
+  "version": "1.0.0",
   "description": "A pure nodejs tga image parser and writer.",
   "main": "index.js",
   "scripts": {
@@ -24,7 +24,6 @@
   },
   "homepage": "https://github.com/steel1990/tga#readme",
   "dependencies": {
-    "debug": "^2.6.1",
-    "smart-buffer": "^3.0.1"
+    "debug": "^2.6.1"
   }
 }
