--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "tga",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "A pure nodejs tga image parser and writer.",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -28,6 +28,7 @@
     "restructure": "^2.0.0"
   },
   "devDependencies": {
+    "fs-extra": "^10.1.0",
     "pngjs": "^5.0.0"
   }
 }
